<resources>
    <string name="app_name">Lab 7</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="password">password</string>
    <string name="radio_button">RadioButton</string>
    <string name="check_box">CheckBox</string>
    <string name="switch_text">What does this do?</string>
    <string name="dialog_message">Do you want to finish the Activity?</string>
    <string name="dialog_title">Finish?</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="activityResponse">Here is my response</string>
    <string name="startChat">Start Chat</string>
    <string name="send">Send</string>
    <string name="weather">Weather Forecast</string>
    <string name="deleteMessage">Delete this message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="ask_go_back">Do you want to go back?</string>
    <string name="newMessage">New Message</string>
</resources>
